2005-03-16  Ethan Merritt  <merritt@u.washington.edu>

	* src/datafile.c (df_readline): Allow for embedded whitespace in the
	output of a string-valued expression inside a "using" spec.

	* src/graph3d.c (plot3d_points_pm3d plot3d_points): Remove routine
	plot3d_points_pm3d, and handle pm3d-colored points in plot3d_points
	instead. This removes any special drawing order for the points.

2005-03-16  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/axis.h (AXIS_ACTUAL_MAX, AXIS_ACTUAL_MIN): New macros to
	access range endpoints correctly, even if 'set view map' has mixed
	up the internal status.

	* src/util3d.c (IN_AXIS_RANGE): New macro, equivalent to calling
	inrange() with the two endpoints of any given axis' range.  Makes
	code a bit more readable.
	(edge3d_intersect): New local macros INTERSECT_PLANE,
	INTERSECT_DIAG to centralize lots of very similar code blocks.
	Implement fix for clipping of -VERYLARGE points in the presence of
	'set view map' reversed ranges, by using new axis.h macros.
	(two_edge3d_intersect): Use new macro IN_AXIS_RANGE, reindent, for
	readability.
	
2005-03-15  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/pm3d.c (set_plot_with_palette): Fix displaying colorbox also for
	'splot ... with image'.

2005-03-14  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/pm3d.c (set_plot_with_palette): Fix displaying colorbox for 'plot
	... with image'.

2005-03-12  Ethan Merritt  <merritt@u.washington.edu>

	* src/plot2d.c (eval_plots): Fix bug in initialization order that
	prevented "set style data labels" from working in 2D plots.

2005-03-09  Ethan Merritt  <merritt@u.washington.edu>

	* term/emf.trm term/gd.trm term/pdf.trm term/pm.trm term/post.trm
	term/svg.trm term/x11.trm src/gplt_x11.c src/gplt_x11.h:
	Modify term->set_color() to handle colorspec type LC_LT.
	This has the effect of changing the current line color to that of
	default linetype <lc> without changing any other line properties.
